from datetime import datetime

from pydantic import BaseModel


class ProjectBase(BaseModel):
    name: str
    description: str | None = None


class ProjectRead(ProjectBase):
    id: int
    created_at: datetime | None = None
    name: str
    description: str | None = None

    class Config:
        from_attributes = True
